change: rm auth module
