# src/modules/auth/model/auth.dto.ts
@@ -1,36 +1,0 @@
-import { IsEmail, IsString } from 'class-validator';
-
-export class LoginDto {
-  @IsString()
-  login: string;
-
-  @IsString()
-  password: string;
-}
-
-export class ChangePasswordDto {
-  @IsString()
-  currentPassword: string;
-
-  @IsString()
-  password: string;
-
-  @IsString()
-  passwordConfirm: string;
-}
-
-export class RequestPasswordResetDto {
-  @IsEmail()
-  email: string;
-}
-
-export class PasswordResetDto {
-  @IsString()
-  token: string;
-
-  @IsString()
-  password: string;
-
-  @IsString()
-  passwordConfirm: string;
-}
